# mrs_bumper

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  \  bumper_nodelet.xml  nodelets.xml  package.xml
.ci/: deploy_key_github.enc
config/: Bumper.cfg  BumperConfig.cfg  bumper_darpa.yaml  bumper_params_realsense.yaml  bumper_params_sim.yaml  realworld.yaml  simulation.yaml  uav.yaml  uav_test_OS0.yaml
gazebo/worlds/: bumper_testing.world
launch/: bumper.launch  bumper_darpa.launch  bumper_no_realsense.launch  display_histogram.launch  rviz.launch  rviz_darpa.launch  rviz_uav10.launch  rviz_uav5.launch  simulation.launch
msgs/: ObstacleSectors.msg
rviz/: darpa.rviz  uav1.rviz  uav10.rviz  uav5.rviz
src/: bumper_nodelet.cpp  histogram_displayer.cpp
tmux/: layout.json  session.yml
tmux/config/: custom_config.yaml  m690.yaml  world_config.yaml
tmux_scripts/simulation/: .tmuxinator.yml  session.yml
