<?xml version="1.0"?>
<package format="2">

  <name>mrs_bumper</name>
  <version>1.0.0</version>
  <description>Program for publishing bumper messages for reactive collision avoidance</description>

  <author email="vrbamato@fel.cvut.cz">Matouš Vrba</author>
  <maintainer email="vrbamato@fel.cvut.cz">Matouš Vrba</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
