<?xml version="1.0"?>
<package format="2">

  <name>mrs_bumper</name>
  <version>1.0.4</version>
  <description>Program for publishing bumper messages for reactive collision avoidance</description>

  <author email="vrbamato@fel.cvut.cz">Matouš Vrba</author>
  <maintainer email="vrbamato@fel.cvut.cz">Matouš Vrba</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_runtime</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>nodelet</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
